Fix image size and alignment

--- a/src/projectDetails.css
+++ b/src/projectDetails.css
@@ -22,7 +22,7 @@
     overflow-y: hidden;
       /* max-inline-size:80% ; */
       scrollbar-width: none;
-      max-height: 60%;
+      max-height: 70%;
     }
 
     .project-image { 
@@ -33,7 +33,7 @@
         /* float: right; */
         /* max-height: 88%; */
         /* max-height: 60%; */
-        max-width: 100%;
+        max-width: 70%;
         display: inline-block;
         /* line-height: 100px;  */
       }
